VR: Add VrShell vector icon library and Screen share icon.

screen_share.icon is added to vr_shell vector_icon library to avoid using
icons that are designed for specific screen size.
The icon will be modified to make sure that it looks fine in VR.

BUG=736350

Change-Id: Iaa9934fa99345e58acd60d7e3250b58b80ba170f